Fixes Firefox layout bug in video cards thumbnails (#288)

--- a/static/scss/collection.scss
+++ b/static/scss/collection.scss
@@ -257,8 +257,6 @@ $video-card-width: 15.6%;
       }
 
       .card-contents {
-        display: flex;
-        flex-direction: column;
         height: 100%;
         background: #fff;
       }
