--- a/static/scss/generalStyles.scss
+++ b/static/scss/generalStyles.scss
@@ -16,10 +16,6 @@ body {
   line-height: 1.4rem;
 }
 
-p.channelLink {
-  margin-bottom: 0px;
-}
-
 a, a:link, a:visited, a:active {
   color: $linkcolor;
   text-decoration: none;
@@ -57,7 +53,7 @@ button {
 
 .card {
   background-color: $card-bg-color;
-  box-shadow: 1px 2px 11px $card-shadow;
+  box-shadow: 1px 1px 8px $card-shadow;
   border-radius: 3px;
 
   .title {
